WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118814
[Mac] Crashes in CFURLGetBytes under WebProcess::updateActivePages()
https://bugs.webkit.org/show_bug.cgi?id=118814
Summary
[Mac] Crashes in CFURLGetBytes under WebProcess::updateActivePages()
Alexey Proskuryakov
Reported
2013-07-17 14:47:24 PDT
We're seeing crashes like this: 0 com.apple.CoreFoundation 0x00007fff8fd2e49f CFURLGetBytes + 31 1 com.apple.WebCore 0x00007fff9149972b WebCore::originalURLData(NSURL*) + 75 2 com.apple.WebCore 0x00007fff914997c7 WebCore::userVisibleString(NSURL*) + 39 3 com.apple.WebKit2 0x00007fff8950a078 WebKit::WebProcess::updateActivePages() + 628 4 com.apple.WebKit2 0x00007fff894c4eca WebKit::WebPage::didCommitLoad(WebKit::WebFrame*) + 150 5 com.apple.WebKit2 0x00007fff894a0fc7 WebKit::WebFrameLoaderClient::dispatchDidCommitLoad() + 281 6 com.apple.WebCore 0x00007fff9084da87 WebCore::FrameLoader::dispatchDidCommitLoad() + 39 7 com.apple.WebCore 0x00007fff9084d093 WebCore::FrameLoader::receivedFirstData() + 19 8 com.apple.WebCore 0x00007fff90d55a74 WebCore::DocumentLoader::commitData(char const*, unsigned long) + 244 9 com.apple.WebKit2 0x00007fff894a20f4 WebKit::WebFrameLoaderClient::committedLoad(WebCore::DocumentLoader*, char const*, int) + 74 10 com.apple.WebCore 0x00007fff9084b6c8 WebCore::DocumentLoader::commitLoad(char const*, int) + 136 11 com.apple.WebCore 0x00007fff90d57570 WebCore::DocumentLoader::dataReceived(WebCore::CachedResource*, char const*, int) + 736 12 com.apple.WebCore 0x00007fff90c6d0af WebCore::CachedRawResource::data(WTF::PassRefPtr<WebCore::ResourceBuffer>, bool) + 383 13 com.apple.WebCore 0x00007fff913cceb3 WebCore::SubresourceLoader::sendDataToResource(char const*, int) + 131 14 com.apple.WebCore 0x00007fff913cd086 WebCore::SubresourceLoader::didReceiveDataOrBuffer(char const*, int, WTF::PassRefPtr<WebCore::SharedBuffer>, long long, WebCore::DataPayloadType) + 246 15 com.apple.WebCore 0x00007fff913ccf63 WebCore::SubresourceLoader::didReceiveData(char const*, int, long long, WebCore::DataPayloadType) + 35 This appears to mean that frame URL is invalid, which can't happen when committing a load. Yet, need to stop crashing. <
rdar://problem/14173389
>
Attachments
proposed fix
(2.06 KB, patch)
2013-07-17 14:51 PDT
,
Alexey Proskuryakov
beidson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-07-17 14:51:04 PDT
Created
attachment 206916
[details]
proposed fix
Brady Eidson
Comment 2
2013-07-17 14:58:35 PDT
Comment on
attachment 206916
[details]
proposed fix Discussed a few changes with Alexey on IRC. r+ with them.
Alexey Proskuryakov
Comment 3
2013-07-17 15:04:43 PDT
Committed <
http://trac.webkit.org/r152805
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug