        [Mac] Crashes in CFURLGetBytes under WebProcess::updateActivePages()         https://bugs.webkit.org/show_bug.cgi?id=118814         <rdar://problem/14173389>

Reviewed by Brady Eidson.

        Speculative fix. It's unclear how we end up with an invalid URL when committing
        a load.

        * WebProcess/mac/WebProcessMac.mm: (WebKit::WebProcess::updateActivePages):
        Added a null check.



Canonical link: https://commits.webkit.org/136679@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152805 268f45cc-cd09-0410-ab3c-d52691b4dbfc